kuberay-examples/ray-serve-stablediffusion.yaml
#----------------------------------------------------------------------
# NOTE: For deployment instructions, refer to the DoEKS website.
#----------------------------------------------------------------------
---
apiVersion: v1
kind: Namespace
metadata:
  name: stablediffusion
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stablediffusion
  namespace: stablediffusion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Ray Dashboard: you can access the dashboard using the NLB DNS name with port 8265 and the path "/dashboard". However, the NLB is currently configured as private, preventing access from outside the VPC.
      # To access the dashboard:
      # Option 1: Use the `kubectl port-forward` command.
      # Option 2: Deploy a public-facing NLB by modifying the configuration file "ai-ml/jark-stack/terraform/helm-values/ingress-nginx-values.yaml".
      - path: /dashboard/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: stablediffusion
            port:
              number: 8265
      # Ray Serve
      - path: /serve/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: stablediffusion
            port:
              number: 8000
